--- a/PortalNews/.gitignore
+++ b/PortalNews/.gitignore
@@ -1,3 +1,12 @@
 .idea/
 venv/
-NewsPaper/db.sqlite3
+.env
+*.log
+*.pot
+*.pyc
+__pycache__/
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+media
+static
